--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="images/hero3.jpg" class="d-block w-100" alt="Proyek 3" />
+          <img src="images/hero3.png" class="d-block w-100" alt="Proyek 3" />
           <div class="carousel-caption d-none d-md-block">
             <h1 class="fw-bold">Bangunan Berkualitas Tinggi</h1>
             <p>Kami selalu memberikan hasil terbaik</p>
