--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     />
+
+    <!-- link font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="#">Konveksi Bangunan</a>
+        <a class="navbar-brand fw-bold" href="#">S-Website</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -52,7 +58,7 @@
           <div class="carousel-caption d-none d-md-block">
             <h1 class="fw-bold">Membangun Masa Depan</h1>
             <p>Solusi Konstruksi Berkualitas untuk Berbagai Proyek</p>
-            <a href="#kontak" class="btn btn-primary btn-lg">Hubungi Kami</a>
+            <a href="#kontak" class="btn btn-lg">Hubungi Kami</a>
           </div>
         </div>
         <div class="carousel-item">
@@ -97,7 +103,9 @@
     <!-- Tentang Kami -->
     <section id="tentang" class="py-5 bg-light text-center">
       <div class="container">
-        <h2 class="fw-bold">Tentang Kami</h2>
+        <h2 class="fw-bold">
+          <i class="fa-regular fa-building"></i>Tentang Kami
+        </h2>
         <p class="lead">
           Sejak 1946, kami telah dipercaya dalam desain-build, pra-konstruksi,
           dan manajemen konstruksi.
